# 2DShooter

./: .gitignore
Shooter/: CMakeLists.txt  CMakeUserPresets.json  Shooter.cpp  Shooter.h  animation.h  gameobject.h  timer.h
